src/syntax/parser/snapshots/hebi__syntax__parser__tests__grouping_expr.snap
---
source: src/syntax/parser/tests.rs
expression: module
---
Module {
    body: [
        Expr(
            Binary(
                Binary {
                    op: Add,
                    left: GetVar(
                        GetVar {
                            name: "a",
                        },
                    ),
                    right: GetVar(
                        GetVar {
                            name: "b",
                        },
                    ),
                },
            ),
        ),
        Expr(
            Binary(
                Binary {
                    op: Add,
                    left: GetVar(
                        GetVar {
                            name: "a",
                        },
                    ),
                    right: GetVar(
                        GetVar {
                            name: "b",
                        },
                    ),
                },
            ),
        ),
        Expr(
            Call(
                Call {
                    target: GetVar(
                        GetVar {
                            name: "a",
                        },
                    ),
                    args: Args {
                        pos: [
                            GetVar(
                                GetVar {
                                    name: "b",
                                },
                            ),
                        ],
                        kw: [],
                    },
                },
            ),
        ),
        Expr(
            GetVar(
                GetVar {
                    name: "a",
                },
            ),
        ),
    ],
}
