src/syntax/parser/snapshots/hebi__syntax__parser__tests__if_stmt-2.snap
---
source: src/syntax/parser/tests.rs
expression: module
---
Module {
    body: [
        If(
            If {
                branches: [
                    Branch {
                        cond: GetVar(
                            GetVar {
                                name: Ident(
                                    "a",
                                ),
                            },
                        ),
                        body: [
                            Pass,
                        ],
                    },
                    Branch {
                        cond: GetVar(
                            GetVar {
                                name: Ident(
                                    "b",
                                ),
                            },
                        ),
                        body: [
                            Pass,
                        ],
                    },
                    Branch {
                        cond: GetVar(
                            GetVar {
                                name: Ident(
                                    "c",
                                ),
                            },
                        ),
                        body: [
                            Pass,
                        ],
                    },
                ],
                default: Some(
                    [
                        Pass,
                    ],
                ),
            },
        ),
    ],
}
