src/syntax/parser/snapshots/hebi__syntax__parser__tests__if_stmt-3.snap
---
source: src/syntax/parser/tests.rs
expression: module
---
Module {
    body: [
        If(
            If {
                branches: [
                    Branch {
                        cond: GetVar(
                            GetVar {
                                name: Ident(
                                    "a",
                                ),
                            },
                        ),
                        body: [
                            Expr(
                                GetVar(
                                    GetVar {
                                        name: Ident(
                                            "a",
                                        ),
                                    },
                                ),
                            ),
                            Expr(
                                GetVar(
                                    GetVar {
                                        name: Ident(
                                            "b",
                                        ),
                                    },
                                ),
                            ),
                        ],
                    },
                    Branch {
                        cond: GetVar(
                            GetVar {
                                name: Ident(
                                    "b",
                                ),
                            },
                        ),
                        body: [
                            Expr(
                                GetVar(
                                    GetVar {
                                        name: Ident(
                                            "a",
                                        ),
                                    },
                                ),
                            ),
                            Expr(
                                GetVar(
                                    GetVar {
                                        name: Ident(
                                            "b",
                                        ),
                                    },
                                ),
                            ),
                        ],
                    },
                    Branch {
                        cond: GetVar(
                            GetVar {
                                name: Ident(
                                    "c",
                                ),
                            },
                        ),
                        body: [
                            Expr(
                                GetVar(
                                    GetVar {
                                        name: Ident(
                                            "a",
                                        ),
                                    },
                                ),
                            ),
                            Expr(
                                GetVar(
                                    GetVar {
                                        name: Ident(
                                            "b",
                                        ),
                                    },
                                ),
                            ),
                        ],
                    },
                ],
                default: Some(
                    [
                        Expr(
                            GetVar(
                                GetVar {
                                    name: Ident(
                                        "a",
                                    ),
                                },
                            ),
                        ),
                        Expr(
                            GetVar(
                                GetVar {
                                    name: Ident(
                                        "b",
                                    ),
                                },
                            ),
                        ),
                    ],
                ),
            },
        ),
    ],
}
