src/syntax/parser/snapshots/hebi__syntax__parser__tests__if_stmt-4.snap
---
source: src/syntax/parser/tests.rs
expression: module
---
Module {
    body: [
        If(
            If {
                branches: [
                    Branch {
                        cond: GetVar(
                            GetVar {
                                name: Ident(
                                    "a",
                                ),
                            },
                        ),
                        body: [
                            If(
                                If {
                                    branches: [
                                        Branch {
                                            cond: GetVar(
                                                GetVar {
                                                    name: Ident(
                                                        "b",
                                                    ),
                                                },
                                            ),
                                            body: [
                                                Pass,
                                            ],
                                        },
                                    ],
                                    default: None,
                                },
                            ),
                        ],
                    },
                ],
                default: None,
            },
        ),
    ],
}
