src/syntax/parser/snapshots/hebi__syntax__parser__tests__if_stmt-9.snap
---
source: src/syntax/parser/tests.rs
expression: errors
---
invalid indentation
| [4;31melse[0m: pass


