src/syntax/parser/snapshots/hebi__syntax__parser__tests__if_stmt.snap
---
source: src/syntax/parser/tests.rs
expression: module
---
Module {
    body: [
        If(
            If {
                branches: [
                    Branch {
                        cond: GetVar(
                            GetVar {
                                name: "a",
                            },
                        ),
                        body: [
                            Pass,
                        ],
                    },
                    Branch {
                        cond: GetVar(
                            GetVar {
                                name: "b",
                            },
                        ),
                        body: [
                            Pass,
                        ],
                    },
                    Branch {
                        cond: GetVar(
                            GetVar {
                                name: "c",
                            },
                        ),
                        body: [
                            Pass,
                        ],
                    },
                ],
                default: Some(
                    [
                        Pass,
                    ],
                ),
            },
        ),
    ],
}
